# prehrajto-scraper

./: .gitignore  Cargo.toml  README.md
crates/prehrajto-core/: Cargo.toml  README.md
crates/prehrajto-core/examples/: debug_direct_url.rs  debug_html.rs
crates/prehrajto-core/src/: client.rs  error.rs  lib.rs  scraper.rs  types.rs  url.rs
crates/prehrajto-core/src/parser/: direct_url.rs  mod.rs  search.rs
crates/prehrajto-tauri/: Cargo.toml  README.md
crates/prehrajto-tauri/src/: commands.rs  lib.rs
