[workspace]
resolver = "2"
members = [
    "crates/prehrajto-core",
    "crates/prehrajto-tauri",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
authors = ["xdkid1337"]
repository = "https://github.com/xdkid1337/prehrajto-scraper"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# HTML parsing
scraper = "0.25.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# URL encoding
urlencoding = "2"

# Regex
regex = "1"

# Tauri
tauri = { version = "2", features = [] }

# Testing
proptest = "1"
wiremock = "0.5"

# Internal crates
prehrajto-core = { path = "crates/prehrajto-core" }
