[package]
name = "prehrajto-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core scraping library for prehraj.to"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
wiremock = { workspace = true }
