[package]
name = "prehrajto-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri integration for prehraj.to scraper"

[dependencies]
prehrajto-core = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
