[package]
name = "prehrajto-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tauri plugin for prehraj.to video scraper"
readme = "README.md"
keywords = ["tauri", "plugin", "prehrajto", "video"]
categories = ["gui"]

[dependencies]
prehrajto-core = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
